--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: bondoni;
+    src: url(../fonts/BodoniFLF-Roman.ttf);
+  }
+
+  @font-face {
+    font-family: bondoni-talic;
+    src: url(../fonts/BodoniFLF-Italic.ttf);
+  }
+  @font-face {
+    font-family: mellony;
+    src: url('../fonts/mellonydrybrush.ttf');
+  }
+
+
+  *{
+    box-sizing: border-box;
+
+  }
+  html{
+
+    width: 100%;
+    height: 100%;
+  }
+  body{
+
+
+    width: 100%;
+    height: 100%;
+  }
