--- a/src/hello/hello.component.html
+++ b/src/hello/hello.component.html
@@ -1,5 +1,5 @@
-<div style="width:250px;height:250px;display: flex;justify-content: center">
-    <img src="../assets/2019-12-29.png" style="width: 100%;height:100%;cursor: pointer;" routerLink="../invitation" routerLinkActive="true"/>
-</div>
+<div class="main">
+        <img src="../assets/2019-12-29.png" style="display: inline-block;width: 200px;height:200px;cursor: pointer;" routerLink="../invitation" routerLinkActive="true"/> 
+        <div style="text-align: center; cursor: pointer;font-size: 40px" title="Click for information about the Sheltonwelder wedding." routerLink="../invitation" routerLinkActive="true">THE THING.</div>
 
-<div style="text-align: center; cursor: pointer;width:250px;height:60px" title="Click for information about the Sheltonwelder wedding." routerLink="../invitation" routerLinkActive="true">THE THING.</div>
+</div>
