--- a/src/invitation/invitation.component.html
+++ b/src/invitation/invitation.component.html
@@ -1,11 +1,14 @@
+<div class="main">
 <div class="invitation">
+  <div class="real-deal"></div>
   <div class="request">Your Presence is Requested to Witness</div>
-  <div class="sheltonwelder-header">THE</div>
+  <div class="sheltonwelder-header" style="font-size:25px;height: 20px;">THE</div>
   <div class="sheltonwelder-header">SHELTONWELDERS</div>
+  <div class="sheltonwelder-names">(Paul Shelton and Amanda Blackwelder)</div>
   <div class="tie-knot">Tie the Knot!</div>
   <div class="rsvp">
     <span class="rsvp-button" routerLink="../rsvp" routerLinkActive="true">Click Here to RSVP</span></div>
-  <div class="love-bow"><hr></div>
+  <div class="love-bow"></div>
   <div class="date">02.22.20</div>
   <div class="home-title">The Home of David and Georgette Jamison</div>
   <div class="address" (click)="openMap()">
@@ -16,4 +19,5 @@
   <div class="food">
     <span>It's a BBQ! In Lieu of gifts bring your favorite side dish.</span>
   </div>
+</div>
 </div>
