--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,12 @@
 .main {
-    width: 100%;
-    height: 100%;
-
+    width: 100% !important;
+    height: 100% !important;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-content: center;
     align-items: center;
     flex-direction: column;
     font-size: 40px;
+    font-family: lato;
 }
