--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="main">
+<!-- <div class="main"> -->
 
-<router-outlet></router-outlet>
+<router-outlet style="width:100%;height:100%;"></router-outlet>
 
-</div>
+<!-- </div> -->
