--- a/src/rsvp/rsvp.component.css
+++ b/src/rsvp/rsvp.component.css
@@ -1,3 +1,7 @@
+.main{
+    display:flex;justify-content:center;flex-direction:column;width:100%!important;height:100% !important;border: solid;align-content: center;align-items: center;
+    font-family: lato;
+}
 .rsvp{
     border: solid;
     border-width: 1px;
@@ -39,18 +43,20 @@
 .complete >:nth-child(2){
     display: block;
     font-size: 15px;
-    font-family: bedoni !important;
+    font-family: lato !important;
 }
 
 .label {
     display: inline-block;
+    line-height: 100%;
     width:150px;
 }
 .rsvp-input{
-    height: 30px;
+    height: 25px;
     border-radius: 12px;
     width:200px;
     font-size: 12px;
+    text-align: center;
     padding-left: 2px;
 }
 
@@ -82,7 +88,7 @@
 
 .rsvp-form{
     width: 69%;
-   
+   font-family: lato;
     height: 100%;
 }
 
@@ -91,7 +97,7 @@
     font-size: 35px;
 }
 .welcome{
-    font-family: bedoni;
+    font-family: lato;
     font-size: 18px;
 }
 
@@ -103,9 +109,9 @@
 
 .yes-no span{
     display: block;
-    font-family: bondoni;
+    font-family: lato;
     font-style: normal;
-    font-size: 18px;
+    font-size: 15px;
 }
 
 .control{
@@ -116,7 +122,7 @@
     width: 100%;
 }
 .email{
-    font-family: bondoni;
+    font-family: lato;
     font-style: normal;
     font-size: 18px;
     width: 100%;
@@ -125,10 +131,12 @@
 
 
 .rsvp-button{
-    font-family: bondoni;
+    font-family: lato;
     font-style: normal;
+    
     font-size: 18px;
     border: solid;
+    border-width: 1px;
     border-color: lightgray;
     display: flex;
     justify-content: center; 
@@ -136,7 +144,7 @@
     transform: background-color .5s;
     border-radius: 12px;
     height: 35px;
-    line-height: 30px;
+    line-height: 33px;
     text-align: center;
     cursor: pointer;
     margin-right: 10px;
