--- a/src/rsvp/rsvp.component.html
+++ b/src/rsvp/rsvp.component.html
@@ -1,3 +1,4 @@
+<div class="main">
 <div class="rsvp">
   <div class="initializing" *ngIf="state == 'submit'">Working...</div>
   <div class="complete" *ngIf="state == 'complete'">
@@ -34,4 +35,5 @@
 
   </div>
 </ng-container>
+</div>
 </div>
