--- a/src/hello/hello.component.css
+++ b/src/hello/hello.component.css
@@ -1,4 +1,4 @@
 .main{
-    display:flex;justify-content:center;flex-direction:column;width:100%!important;height:100% !important;border: solid;align-content: center;align-items: center;
+    display:flex;justify-content:center;flex-direction:column;width:100%!important;height:100% !important;align-content: center;align-items: center;
     font-family: lato;
 }
