--- a/src/invitation/invitation.component.html
+++ b/src/invitation/invitation.component.html
@@ -2,7 +2,7 @@
 <div class="invitation">
   <div class="real-deal"></div>
   <div class="request">Your Presence is Requested to Witness</div>
-  <div class="sheltonwelder-header" style="font-size:25px;height: 20px;">THE</div>
+  <div class="sheltonwelder-header" style="font-size:25px;height: 20px;letter-spacing: 2px;">THE</div>
   <div class="sheltonwelder-header">SHELTONWELDERS</div>
   <div class="sheltonwelder-names">(Paul Shelton and Amanda Blackwelder)</div>
   <div class="tie-knot">Tie the Knot!</div>
