--- a/src/rsvp-mobile/rsvp-mobile.component.css
+++ b/src/rsvp-mobile/rsvp-mobile.component.css
@@ -14,8 +14,16 @@ input[type="url"],
 input[type="week"],
 select:focus,
 textarea {
-  font-size: 16px;
+  font-size: 18px;
 }
+
+@media screen and (-webkit-min-device-pixel-ratio:0) { 
+    select,
+    textarea,
+    input {
+      font-size: 18px;
+    }
+  }
 
 .main{
     display:flex;justify-content:center;flex-direction:column;width:100%!important;height:100% !important;align-content: center;align-items: center;
@@ -74,7 +82,6 @@ textarea {
     height: 30px;
     border-radius: 12px;
     width:200px;
-    font-size: 18px;
     text-align: center;
     padding-left: 2px;
 }
