--- a/src/rsvp-mobile/rsvp-mobile.component.html
+++ b/src/rsvp-mobile/rsvp-mobile.component.html
@@ -26,7 +26,7 @@
   <div class="control">
     <div class="rsvp-button" (click)="onSendMail()" title="Please Complete Name and Email Fields" [class.disabled]="!validForm()">Submit</div>
     <div class="rsvp-button" (click)="reset()">Reset</div>
-    <div class="rsvp-button" routerLink="../invitation" routerLinkActive="true">Back</div>
+    <div class="rsvp-button" routerLink="../invitation-m" routerLinkActive="true">Back</div>
   </div>
 </div>
   </ng-container>
