--- a/src/rsvp-mobile/rsvp-mobile.component.html
+++ b/src/rsvp-mobile/rsvp-mobile.component.html
@@ -2,7 +2,7 @@
 <div class="initializing" *ngIf="state == 'submit'">Working...</div>
 <div class="complete" *ngIf="state == 'complete'">
   <div>Thanks!</div>
-  <div><em><a href="" routerLink="../invitation" routerLinkActive="true">Back</a></em></div>
+  <div><em><a href="" routerLink="../invitation-m" routerLinkActive="true">Back</a></em></div>
 </div>
 <ng-container *ngIf="state == 'rsvp'">
 
