--- a/src/invitation/invitation.component.html
+++ b/src/invitation/invitation.component.html
@@ -8,6 +8,10 @@
   <div class="tie-knot">Tie the Knot!</div>
   <div class="rsvp">
     <span class="rsvp-button" routerLink="../rsvp" routerLinkActive="true">Click Here to RSVP</span></div>
+    <div class="rsvp">
+        <span class="rsvp-button" (click)="nav('https://www.crateandbarrel.com/gift-registry/amanda-blackwelder-and-paul-shelton/r6071439')">Click Here to View Registry
+        </span>
+    </div>
   <div class="love-bow"></div>
   <div class="date">02.22.20</div>
   <div class="home-title">The Home of David and Georgette Jamison</div>
@@ -18,6 +22,8 @@
   </div>
   <div class="food">
     <span>It's a BBQ! In Lieu of gifts bring your favorite side dish.</span>
+    <span>BBQ wedding attire!</span>
+
   </div>
 </div>
 </div>
