--- a/src/rsvp/rsvp.component.css
+++ b/src/rsvp/rsvp.component.css
@@ -8,7 +8,7 @@
     border-color: lightgray;
     border-radius: 12px;
     width: 600px;
-    height: 380px;
+    height: 410px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -54,7 +54,7 @@
 .rsvp-input{
     height: 25px;
     border-radius: 12px;
-    width:200px;
+    width:230px;
     font-size: 12px;
     text-align: center;
     padding-left: 2px;
@@ -110,6 +110,16 @@
     font-size: 15px;
 }
 
+.comments{
+    margin-top: 10px;
+    border-color: lightgray;
+    border-radius: 12px;
+    width:230px;
+    font-size: 12px;
+    text-align: left;
+    padding-left: 5px;
+}
+
 .yes-no{
     display: flex;
     flex-direction: column;
@@ -160,6 +170,6 @@
 }
 
 .rsvp-button:hover{
-    background-color: orange;
+    background-color:#F49B71;
     color: white;
 }
