--- a/src/rsvp-mobile/rsvp-mobile.component.css
+++ b/src/rsvp-mobile/rsvp-mobile.component.css
@@ -86,6 +86,17 @@ textarea {
     padding-left: 2px;
 }
 
+.comments{
+    margin-top: 10px;
+    border-color: lightgray;
+    border-radius: 12px;
+    width:90%;
+    font-size: 18px;
+    text-align: left;
+    padding-left: 5px;
+}
+
+
 .left{
     display: flex;
     border-right-color: lightgray !important;
