--- a/src/rsvp-mobile/rsvp-mobile.component.html
+++ b/src/rsvp-mobile/rsvp-mobile.component.html
@@ -23,6 +23,15 @@
     </span>
   </div>
   <div class="email"><span class="label">EMAIL:</span><span><input type="text" id="email" [(ngModel)]="email" class="rsvp-input" /></span></div>
+  
+  <div class="welcome" style="margin-top:20px !important">
+      <span class="label" style="width:80%;">Dietary Restrictions? Special Needs? What are you bringing?</span>
+
+  </div>
+  <div class="welcome">
+
+      <textarea [(ngModel)]="comments" spellcheck="false" rows="4" class="comments"></textarea>
+    </div>
   <div class="control">
     <div class="rsvp-button" (click)="onSendMail()" title="Please Complete Name and Email Fields" [class.disabled]="!validForm()">Submit</div>
     <div class="rsvp-button" (click)="reset()">Reset</div>
