--- a/src/hello/hello.component.html
+++ b/src/hello/hello.component.html
@@ -2,4 +2,7 @@
         <img src="../assets/2019-12-29.png" style="display: inline-block;width: 200px;height:200px;cursor: pointer;" routerLink="../invitation" routerLinkActive="true"/> 
         <div style="text-align: center; cursor: pointer;font-size: 40px" title="Click for information about the Sheltonwelder wedding." routerLink="../invitation" routerLinkActive="true">THE THING.</div>
 
+        <div style="text-align: center; cursor: pointer;font-size: 12px" title="Click for information about the Sheltonwelder wedding.">
+                <a href="" routerLink="../invitation" routerLinkActive="true"><em>View Invitation...</em></a>
+                </div>
 </div>
