--- a/src/rsvp/rsvp.component.css
+++ b/src/rsvp/rsvp.component.css
@@ -8,7 +8,7 @@
     border-color: lightgray;
     border-radius: 12px;
     width: 600px;
-    height: 410px;
+    height: 455px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -114,7 +114,7 @@
     margin-top: 10px;
     border-color: lightgray;
     border-radius: 12px;
-    width:230px;
+    width:95%;
     font-size: 12px;
     text-align: left;
     padding-left: 5px;
