--- a/src/rsvp/rsvp.component.html
+++ b/src/rsvp/rsvp.component.html
@@ -30,9 +30,13 @@
       
     </div>
     <div class="email"><span class="label">EMAIL:</span><span><input spellcheck="true" type="text" id="email" [(ngModel)]="email" class="rsvp-input" /></span></div>
+    <div class="welcome" style="margin-top:20px !important;">
+        <span class="label" style="width:95%">Dietary Restrictions? Special Needs? If you're bringing food, what dish?</span>
+
+    </div>
     <div class="welcome">
-        <span class="label">Dietary Restrictions? Special Needs? What are you bringing?</span>
-        <textarea [(ngModel)]="comments" spellcheck="false" rows="3" class="comments"></textarea>
+ 
+        <textarea [(ngModel)]="comments" spellcheck="false" rows="4" class="comments"></textarea>
       </div>
     <div class="control">
       <div class="rsvp-button" (click)="onSendMail()" title="Please Complete Name and Email Fields" [class.disabled]="!validForm()">Submit</div>
