--- a/src/rsvp/rsvp.component.html
+++ b/src/rsvp/rsvp.component.html
@@ -17,7 +17,7 @@
     <div class="welcome">WE CAN'T WAIT TO SEE YOU!</div>
     <div class="welcome" style="margin-bottom:18px">PLEASE RESPOND BY JANUARY 22ND, 2020</div>
     <div class="welcome" style="margin-bottom:5px">
-      <span class="label">NAME:</span><input type="text" id="name" class="rsvp-input" [(ngModel)]="name" />
+      <span class="label">NAME:</span><input type="text" id="name" class="rsvp-input" [(ngModel)]="name" maxlength="512"/>
     </div>
     <div class="welcome" style="margin-bottom:10px"><span class="label"># OF GUESTS:</span><input type="number" id="num-guests" class="rsvp-input" style="width:50px" [(ngModel)]="numGuests" /></div>
     <div class="yes-no" style="margin-bottom:10px;">
@@ -36,7 +36,7 @@
     </div>
     <div class="welcome">
  
-        <textarea [(ngModel)]="comments" spellcheck="false" rows="4" class="comments"></textarea>
+        <textarea [(ngModel)]="comments" maxlength="1024" spellcheck="false" rows="4" class="comments"></textarea>
       </div>
     <div class="control">
       <div class="rsvp-button" (click)="onSendMail()" title="Please Complete Name and Email Fields" [class.disabled]="!validForm()">Submit</div>
