--- a/src/invitation-mobile/invitation-mobile.component.html
+++ b/src/invitation-mobile/invitation-mobile.component.html
@@ -28,6 +28,6 @@
   <span>FESTIVITIES BEGIN AT 1PM</span>
 </div>
 <div class="food">
-  <span>It's a BBQ! In Lieu of gifts bring your favorite side dish.</span>
+  <span>It's a BBQ! In lieu of gifts bring your favorite side dish.</span>
 </div>
 </div>  
