--- a/src/invitation/invitation.component.html
+++ b/src/invitation/invitation.component.html
@@ -21,7 +21,7 @@
     <span>FESTIVITIES BEGIN AT 1PM</span>
   </div>
   <div class="food">
-    <span>It's a BBQ! In Lieu of gifts bring your favorite side dish.</span>
+    <span>It's a BBQ! In lieu of gifts bring your favorite side dish.</span>
     <span>BBQ wedding attire!</span>
 
   </div>
